--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- <footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
 							</footer> -->
-				<footer style="marign-top:10vh;">
+				<footer style="margin-top:10vh;">
 					<a href="#banner" class="button circled scrolly">Start</a>
 
 					<table style = "margin-top: 10vh;">
@@ -83,6 +83,7 @@
 					<li><a href="index.html">Programs</a></li>
 					<li><a href="index.html">Resources</a></li>
 					<li><a href="index.html">Contact</a></li>
+					<li><a href="index.html">Donate Now!</a></li>
 			</nav>
 
 		</div>
@@ -176,7 +177,7 @@
 							</ul>
 							<table style = "text-align:center; margin-bottom:5vh;">
 								<tr>
-									<td style="width:15vw;">Subscribe to Our Newsletter: <input type="text"><button type="button">Subscribe!</button>
+									<td style="width:15vw;">Subscribe to Our Newsletter: </br><input type="text"><button type="button">Subscribe!</button>
 									</td>
 									
 									<td style="width:15vw;">CONTACT US </br>
